[gd_scene load_steps=6 format=3 uid="uid://bt5iflnyr40rn"]

[ext_resource type="Script" path="res://achievements.gd" id="1_qfo8n"]
[ext_resource type="PackedScene" uid="uid://cspik7p7wt1vb" path="res://stars.tscn" id="1_vuv12"]
[ext_resource type="Texture2D" uid="uid://cb7rjj65yuosq" path="res://success.png" id="2_37rhg"]
[ext_resource type="Theme" uid="uid://bi2f1hatp0lkh" path="res://white_font.tres" id="2_e3ghg"]

[sub_resource type="LabelSettings" id="LabelSettings_tye78"]
font_size = 8
font_color = Color(0.682353, 0.682353, 0.682353, 1)

[node name="Achievements" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qfo8n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.5
offset_top = -4.5
offset_right = 90.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_e3ghg")

[node name="Clear" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Clear"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon"

[node name="Success" type="TextureRect" parent="VBoxContainer/Clear"]
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="UnderSixty" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="DarkLabel" type="Label" parent="VBoxContainer/UnderSixty"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 30:00"
label_settings = SubResource("LabelSettings_tye78")

[node name="Label" type="Label" parent="VBoxContainer/UnderSixty"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 30:00"

[node name="Success" type="TextureRect" parent="VBoxContainer/UnderSixty"]
visible = false
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="UnderThirty" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="DarkLabel" type="Label" parent="VBoxContainer/UnderThirty"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 20:00"
label_settings = SubResource("LabelSettings_tye78")

[node name="Label" type="Label" parent="VBoxContainer/UnderThirty"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 20:00"

[node name="Success" type="TextureRect" parent="VBoxContainer/UnderThirty"]
visible = false
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="UnderTen" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="DarkLabel" type="Label" parent="VBoxContainer/UnderTen"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 10:00"
label_settings = SubResource("LabelSettings_tye78")

[node name="Label" type="Label" parent="VBoxContainer/UnderTen"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 10:00"

[node name="Success" type="TextureRect" parent="VBoxContainer/UnderTen"]
visible = false
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="UnderFive" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="DarkLabel" type="Label" parent="VBoxContainer/UnderFive"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 5:00"
label_settings = SubResource("LabelSettings_tye78")

[node name="Label" type="Label" parent="VBoxContainer/UnderFive"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 5:00"

[node name="Success" type="TextureRect" parent="VBoxContainer/UnderFive"]
visible = false
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="UnderThree" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 4

[node name="DarkLabel" type="Label" parent="VBoxContainer/UnderThree"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 3:00"
label_settings = SubResource("LabelSettings_tye78")

[node name="Label" type="Label" parent="VBoxContainer/UnderThree"]
visible = false
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
text = "Clear Dungeon in under 3:00"

[node name="Success" type="TextureRect" parent="VBoxContainer/UnderThree"]
visible = false
layout_mode = 2
texture = ExtResource("2_37rhg")

[node name="MenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
text = "Return to main menu"

[node name="Stars" parent="." instance=ExtResource("1_vuv12")]

[connection signal="focus_entered" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
